Adjusted class names to ensure readability and fixed a warning
Warning: Each child in a list should have a unique "key" prop. was resolved by moving key to outermost <div>

--- a/frontend/src/components/StreamCardList/StreamCardList.scss
+++ b/frontend/src/components/StreamCardList/StreamCardList.scss
@@ -1,5 +1,5 @@
 
-.streamCard__container{
+.streamCardList__container{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,7 +7,7 @@
     padding: 6px;
     margin: 1em;
  
-    .streamCard{
+    .streamCardList{
         background-color: #2d2d2d;
         width: calc(100vw - 15%);
         border-radius: 10px 10px 6px 6px;
@@ -16,7 +16,7 @@
         align-items: center;
         justify-content: center;
         
-        .streamCard__list{
+        .streamCardList__list{
             display: flex;
         flex-wrap: nowrap;
         flex-direction: row;
@@ -27,7 +27,7 @@
         width: 100%;
         }
 
-        .streamCard__gameName{
+        .streamCardList__gameName{
             background-color: #383838;
             width: 100%;
             color: #afafaf;
